# spacetimedb-relay

./: .gitignore  BITCRAFT.md  CLAUDE.md  Cargo.toml  LICENSE  MEMORY-MIGRATION.md  PORTS.md  README.md  docker-compose.yml
crates/bc14-sdk-test/: Cargo.toml  README.md
crates/bc14-sdk-test/src/: main.rs  sdk_compression.rs  sdk_metrics.rs  sdk_websocket.rs
crates/relay/: Cargo.toml
crates/relay-cache/: Cargo.toml  INVENTORY-WS.md  README.md  build.rs
crates/relay-cache/data/: xp_levels.json
crates/relay-cache/proto/: relay_cache.proto
crates/relay-cache/src/: config.rs  decode.rs  discovery.rs  interest.rs  main.rs  serve.rs  shard.rs  stream.rs  wire.rs  xp.rs
crates/relay-cache/src/store/: building.rs  building_desc.rs  building_nickname.rs  claim.rs  claim_local.rs  claim_member.rs  claim_tech.rs  claim_tile_cost.rs  crafting_recipe_desc.rs  deployable.rs  dimension_network.rs  experience.rs  growth.rs  inventory.rs  location_dim.rs  mobile_entity.rs  mod.rs  passive_craft.rs  player_housing.rs  player_state.rs  player_username.rs  progressive_action.rs  rent.rs  resource.rs  skill_desc.rs  storage_log.rs
crates/relay-coordinator/: Cargo.toml
crates/relay-coordinator/src/: daemon.rs  health.rs  lib.rs  sys_metrics.rs
crates/relay-engine/: Cargo.toml
crates/relay-engine/src/: lib.rs  predicate.rs  project.rs  query.rs  registry.rs
crates/relay-frontend/: Cargo.toml
crates/relay-frontend/src/: client.rs  codec.rs  http.rs  lib.rs  listener.rs  metrics.rs  rewrite.rs  state.rs
crates/relay-mirror-driver/: Cargo.toml
crates/relay-mirror-driver/src/: lib.rs  registry.rs
crates/relay-protocol/: Cargo.toml
crates/relay-protocol/src/: bsatn.rs  lib.rs  schema.rs
crates/relay-publisher/: Cargo.toml
crates/relay-publisher/examples/: smoke.rs
crates/relay-publisher/src/: lib.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: bsatn_emit.rs  connection.rs  dashboard.html  dashboard.rs  lib.rs  metrics.rs
crates/relay-storage/: Cargo.toml
crates/relay-storage/src/: ddl.rs  insert.rs  lib.rs  memstore.rs  meta.rs  snapshot.rs
crates/relay-storage/tests/: memstore_pg_parity.rs  snapshot_diff_e2e.rs  snapshot_round_trip.rs
crates/relay-test-harness/: Cargo.toml
crates/relay-test-harness/src/: main.rs  stdb_client.rs  stdb_client_json.rs  stdb_client_v1.rs
crates/relay-upstream/: Cargo.toml
crates/relay-upstream/src/: client.rs  lib.rs  schema.rs  v1_compat.rs
crates/relay/src/: dashboard.html  dashboard.rs  main.rs  stdb_mode.rs  stdb_spawn.rs
spike/: codegen.py
spike/mirror/: Cargo.toml
spike/replay/: Cargo.toml
spike/replay/src/: main.rs
test-module/: Cargo.toml
test-module/src/: lib.rs
tools/: check-integrity.sh  codegen.py  fleet-status.sh  nginx-explorer.snippet  nginx-relay-cache.snippet  nginx-tutorial.snippet  relay-cache.service  relay-coordinator.service  relay-fleet-start.sh  relay-staleness-monitor.sh  test_codegen.py
tools/mirror-template/: Cargo.toml
tools/mirror-template/src/: .gitkeep
www/: index.html
www/explorer/: index.html
www/explorer/css/: explorer.css
www/explorer/js/: explorer.js
www/tutorial/: connect.html  index.html  inventory-ws.html  players.html  relay-cache.html  schema.html  subscribe.html  troubleshoot.html
www/tutorial/css/: tutorial.css
www/tutorial/js/: tutorial.js
