[workspace]
resolver = "2"
members = [
    "crates/relay",
    "crates/relay-coordinator",
    "crates/relay-protocol",
    "crates/relay-upstream",
    "crates/relay-test-harness",
    "crates/relay-publisher",
    "crates/relay-mirror-driver",
    "crates/relay-frontend",
    "crates/relay-cache",
    "spike/replay",
]
# bc14-sdk-test is intentionally excluded — it pulls v1.12.0 SpacetimeDB
# crates from /tmp via path deps that conflict with the workspace's 2.x
# pins. Build it standalone with `cargo build -p bc14-sdk-test --manifest-path crates/bc14-sdk-test/Cargo.toml`.
exclude = ["test-module", "spike/mirror", "crates/bc14-sdk-test"]

[workspace.package]
version = "2.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ekscrypto/spacetimedb-relay"

[workspace.dependencies]
relay-protocol = { path = "crates/relay-protocol" }
relay-upstream = { path = "crates/relay-upstream" }
relay-publisher = { path = "crates/relay-publisher" }
relay-mirror-driver = { path = "crates/relay-mirror-driver" }
relay-frontend = { path = "crates/relay-frontend" }
relay-coordinator = { path = "crates/relay-coordinator" }
relay-cache = { path = "crates/relay-cache" }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
http = "1"
url = "2"

axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

anyhow = "1"
thiserror = "2"

clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
hashbrown = "0.14"
parking_lot = "0.12"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
dhat = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# SpacetimeDB internal crates. Pinned to a known-good version; revisit if wire format changes.
# If these are not on crates.io we will switch to a git dep on clockworklabs/SpacetimeDB.
spacetimedb-sats = "2.2"
spacetimedb-client-api-messages = "2.2"
spacetimedb-lib = "2.2"
spacetimedb-sql-parser = "2.2"

# Pinned v1.12.0 — the last v1.x release. Pulled in alongside the 2.x crates so we can decode
# upstream traffic from servers that still speak `v1.bsatn.spacetimedb`. Used only inside
# `relay-upstream`; v1 messages are translated to the v2 shape before reaching other crates.
spacetimedb-client-api-messages-v1 = { package = "spacetimedb-client-api-messages", version = "=1.12.0" }
spacetimedb-lib-v1 = { package = "spacetimedb-lib", version = "=1.12.0" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
