[package]
name = "relay-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "relay_coordinator"
path = "src/lib.rs"

[[bin]]
name = "relay-coordinator"
path = "src/bin/relay-coordinator.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# /health aggregator: HTTP server, instance poller, host metrics.
axum = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sysinfo = { workspace = true, features = ["network"] }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
