[package]
name = "relay-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relay-protocol.workspace = true
relay-storage.workspace = true

spacetimedb-lib.workspace = true
spacetimedb-sql-parser.workspace = true

tokio.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
