[package]
name = "relay-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spacetimedb-sats.workspace = true
spacetimedb-client-api-messages.workspace = true
spacetimedb-lib.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
