[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relay-protocol.workspace = true
relay-engine.workspace = true
relay-storage.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
futures-util.workspace = true
bytes.workspace = true
dashmap.workspace = true
http.workspace = true
parking_lot.workspace = true
rand.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
