[package]
name = "relay-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relay-protocol.workspace = true

sqlx.workspace = true
tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true

tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
