[package]
name = "relay-upstream"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relay-protocol.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
http.workspace = true
url.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

spacetimedb-client-api-messages-v1.workspace = true
spacetimedb-lib-v1.workspace = true
