[package]
name = "relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
relay-protocol.workspace = true
relay-upstream.workspace = true
relay-publisher.workspace = true
relay-mirror-driver.workspace = true
relay-frontend.workspace = true
relay-coordinator.workspace = true

tokio.workspace = true
clap.workspace = true
url.workspace = true
reqwest.workspace = true
bytes.workspace = true
axum.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rustls.workspace = true
dhat = { workspace = true, optional = true }

[features]
# Use dhat-rs for heap profiling. Run with:
#   cargo run -p relay --features profile-heap -- ...
# The Profiler writes `dhat-heap.json` to CWD on graceful shutdown;
# load it in https://nnethercote.github.io/dh_view/dh_view.html.
# Off by default — dhat tracks every allocation and is not for production.
profile-heap = ["dep:dhat"]
